--- a/www/index.html
+++ b/www/index.html
@@ -145,7 +145,7 @@
 <body>
   <div class='header'>
     Garage opener
-      <img src="settings.png" alt='Settings' title='Settings' class='settingsIcon' height="35" id='settingsIcon'/>
+      <img src="img/settings.png" alt='Settings' title='Settings' class='settingsIcon' height="35" id='settingsIcon'/>
   </div>
   <div class='afterheader'>
     &nbsp;
@@ -156,7 +156,7 @@
       <table>
       <tr>
         <td>
-          <img src="update.png" alt='Refresh' title='Refresh' height='50' class='refreshButton' id='refreshButton'/>
+          <img src="img/update.png" alt='Refresh' title='Refresh' height='50' class='refreshButton' id='refreshButton'/>
         </td>
         <td id='doorstatustext' style='font-size: 20pt;'>
          Closed
@@ -199,7 +199,7 @@
     </fieldset>
   </div>
     
-  <script type="text/javascript" src="garageopener.js"></script>
+  <script type="text/javascript" src="js/garageopener.js"></script>
 
 </body>
 </html>
