--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml'>
 <head>
-  <title>Garage Opener</title>
+  <meta http-equiv="Content-Security-Policy" 
+        content="default-src *; style-src * 'self' 'unsafe-inline' 'unsafe-eval'; script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
+	<title>Garage Opener</title>
   <style>
     /* Class to hide element */
     .hidden {
