--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Security-Policy" 
         content="default-src *; style-src * 'self' 'unsafe-inline' 'unsafe-eval'; script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
 	<title>Garage Opener</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="/css/styles.css" media="screen" />
 </head>
 <body>
   <div class='header'>
