--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Security-Policy" 
         content="default-src *; style-src * 'self' 'unsafe-inline' 'unsafe-eval'; script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
+	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 	<title>Garage Opener</title>
-	<link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
   <div class='header'>
