--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,8 @@
 <body>
   <div class='header'>
     Garage opener
-      <img src="img/settings.png" alt='Settings' title='Settings' class='settingsIcon' height="32" id='settingsIcon'/>
+		<span class="version">v 0.1</span>
+    <img src="img/settings.png" alt='Settings' title='Settings' class='settingsIcon' height="32" id='settingsIcon'/>
   </div>
   <div class='afterheader'>
     &nbsp;
