Fixed width of buttons

--- a/www/index.html
+++ b/www/index.html
@@ -51,14 +51,14 @@
       </div>
       <br />
       Duration (in seconds):<br />
-      <input id="duration" type="text" /><br />
+      <input id="duration" type="number" /><br />
       <div id='invalidDuration' class='hidden'>
         Invalid duration! It must be a number between
         3 seconds and 60 seconds.<br />
       </div>
       <br />
       Password:<br />
-      <input id="password" type="text" /><br />
+      <input id="password" type="number" /><br />
       <div id='invalidPassword' class='hidden'>
         Invalid password! It must either be empty or a sequence
         of 4 digits.<br />
@@ -97,9 +97,9 @@
           <td><a href="#" class="pwdButton" id='key9'>9</a></td>
         </tr>
         <tr>
-          <td><a href="#" class="pwdButton">&nbsp;</a></td>
+          <td><a href="#" class="pwdButton">-</a></td>
           <td><a href="#" class="pwdButton" id='key0'>0</a></td>
-          <td><a href="#" class="pwdButton">&nbsp;</a></td>
+          <td><a href="#" class="pwdButton">-</a></td>
         </tr>
       </table>
     </div>
